# datex-core-js

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  DEVELOP.md  FAQ.md  README.md  TODO.md  app.dx  build.ts  datex.ts  datex_all.ts  deno.json  import-map.bundle.json  importmap.dev.json  importmap.json
.cargo/: config.template.toml  config.toml
.github/tools/: create-release.ts
.github/workflows/: create-release.yml  deploy-beta.yml  publish.yml  release.yml  test.yml
cov/: 310893c1-c59d-43c2-b090-670678650d2d.json  54360e3e-ab69-4853-8f0b-ebf3ccf7415d.json  83272f47-60b4-44a8-b06e-525dd96d5701.json  9f7cf636-0318-45d8-b7a5-f7e6f9f3d794.json
datex_core_wasm/: Cargo.toml
datex_core_wasm/src/: lib.rs
demo/: demo.ts  index.html  index.ts
lib/: datex_core_js_rs_lib.generated.js  datex_core_js_rs_lib_bg.wasm
rs-lib/: Cargo.toml
rs-lib/src/: js_utils.rs  jsconsole.rs  lib.rs  memory.rs  pointer.rs  runtime.rs
rs-lib/src/crypto/: crypto_js.rs  mod.rs
rs-lib/src/lsp/: io.rs  mod.rs
rs-lib/src/network/: com_hub.rs  errors.rs
rs-lib/src/network/com_interfaces/: base_interface.rs  matchbox_js_interface.rs  mod.rs  serial_js_interface.rs  wasm_js_interface.rs  webrtc_js_interface.rs  webrtc_js_interface_new.rs  websocket_client_interface.rs  websocket_client_js.rs  websocket_client_js_interface.rs  websocket_server_js.rs  websocket_server_js_interface.rs
rs-lib/src/utils/: errors.rs  macros.rs  mod.rs  time.rs
rs-lib/tests/: core_types.rs  mod.rs  web.rs
rs_lib/: Cargo.toml
runtime/: runtime.ts
scripts/: build-bundle.ts  build-npm.ts  build-wasm.ts  datex_core_js.node.js  wasm_url.node.js
src/: datex-core.ts  datex.ts  default.ts  mod.ts  rs_lib.ts
src/datex-core/: datex_core_js.d.ts  datex_core_js.generated.d.ts  datex_core_js.generated.js  datex_core_js.internal.js  datex_core_js.js  datex_core_js.wasm  datex_core_js_bg.wasm
src/dif/: builders.ts  core.ts  definitions.ts  dif-handler.ts  display.ts  js-lib.ts  mod.ts  pointer-cache.ts  type-registry.ts  utils.ts
src/lib/js-core-types/: array.ts  map.ts  mod.ts
src/network/: com-hub.ts  com-interface.ts  mod.ts
src/network/com-interfaces/: WebsocketClientInterface.ts  WebsocketHandler.ts  WebsocketServerInterface.ts
src/network/interface-impls/: base.ts  serial.ts  webrtc.ts  websocket-client.ts  websocket-server-deno.ts
src/refs/: ref.ts
src/runtime/: dif.ts  mod.ts  runtime.ts  special-core-types.ts
src/types/: ts-types.ts
src/utils/: exceptions.ts  option.ts
src/utils/js-runtime-compat/: js-runtime-browser.ts  js-runtime-interface.ts  js-runtime.ts  runtime.ts
src/utils/js-runtime-compat/runtimes/: browser.ts  bun.ts  deno.ts  node.ts
test/: browser.html  browser.ts  crypto.test.ts  init.test.ts  is-node.ts  utils.ts
test/compiler/: execute.test.ts
test/dif/: debug.test.ts  dif.test.ts  utils.test.ts
test/lib/: js-core-types.test.ts
test/lib/js-core-types/: array.test.ts  map.test.ts
test/lib/special-core-types/: undefined.test.ts
test/lsp/: BasicConnect.test.ts
test/network/: BaseInterface.test.ts  ComHub.test.ts  JsInterfaceFactory.ts  WebsockeMockupServer.ts  WebsocketClientInterface.test.ts  WebsocketMockupServer.ts  WebsocketServerInterface.test.ts  websocket-test-server.ts
test/network-builder/: network-builder.html  network-builder.ts
test/network-builder/networks/: simple2.json  test.json
test/runtime/: decompile.test.ts  dif.test.ts  execute.test.ts  json-compat.test.ts  value-parity.test.ts  value-parity.ts
test/types/: ts-types.ts
